--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,70 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 :root {
-    --primary-color: #000;
-    --secondary-color: #00ff00;
-    --tertiary-color: #fff;
+  --primary-color: #000;
+  --secondary-color: #00ff00;
+  --tertiary-color: #fff;
 }
 /* main */
 body {
-    background-color: #333;
+  background-color: #333;
+  height: 100vh;
+  width: 100vw;
 }
 .container {
-    background-color: var(--primary-color);
-    min-height: 100vh;
-    width: 70vw;
-    margin: 0 auto;
+  background-color: var(--primary-color);
+  height: 100%;
+  width: 70%;
+  margin: 0 auto;
 }
 
 header {
-    text-align: center;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    border-bottom: 1px solid var(--tertiary-color);
+  text-align: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid var(--tertiary-color);
 }
 header #title {
-    color: var(--tertiary-color);
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 3rem;
+  color: var(--tertiary-color);
+  font-family: "Courier New", Courier, monospace;
+  font-size: 3rem;
 }
 
 header #description {
-    color: var(--secondary-color);
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    padding-top: 1rem;
-    font-size: 1.5rem;
+  color: var(--secondary-color);
+  font-family: Georgia, "Times New Roman", Times, serif;
+  padding-top: 1rem;
+  font-size: 1.5rem;
 }
 /* utilities */
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .p-1 {
-    padding: 1rem;
+  padding: 1rem;
 }
 
-@media(max-width: 900px) {
-    header #title {
-        font-size: 2rem;
-    }
+@media (max-width: 900px) {
+  .container {
+    width: 85%;
+  }
+  header #title {
+    font-size: 2rem;
+  }
 }
-@media(max-width: 700px) {
-    .container {
-        width: 100vw;
-    }
-    header #title {
-        font-size: 2rem;
-    }
-    header #description {
-        font-size: 1rem;
-    }
+@media (max-width: 700px) {
+  .container {
+    width: 100%;
+  }
+  header #title {
+    font-size: 2rem;
+  }
+  header #description {
+    font-size: 1rem;
+  }
 }
-
