--- a/css/style.css
+++ b/css/style.css
@@ -3,68 +3,249 @@
   padding: 0;
   box-sizing: border-box;
 }
-:root {
-  --primary-color: #000;
-  --secondary-color: #00ff00;
-  --tertiary-color: #fff;
-}
-/* main */
 body {
-  background-color: #333;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
+  background-image: url(/images/bg.jpg);
+  background-size: contain;
+  font-family: "Courier New", Courier, monospace;
+  overflow-x: hidden;
+}
+.pseudo-body {
+  min-height: 100vh;
+  width: 100vw;
+  background-color: #000;
+  opacity: 0.9;
+  overflow: hidden;
+  animation: slideInFromTop 0.5s ease-in;
 }
 .container {
-  background-color: var(--primary-color);
-  height: 100%;
-  width: 70%;
+  color: #fff;
   margin: 0 auto;
+  min-height: 100vh;
+  width: 70vw;
+  padding-bottom: 10px;
 }
-
 header {
+  border-bottom: 1px solid #fff;
   text-align: center;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: 1px solid var(--tertiary-color);
-}
-header #title {
-  color: var(--tertiary-color);
-  font-family: "Courier New", Courier, monospace;
-  font-size: 3rem;
-}
-
-header #description {
-  color: var(--secondary-color);
-  font-family: Georgia, "Times New Roman", Times, serif;
-  padding-top: 1rem;
-  font-size: 1.5rem;
-}
-/* utilities */
-
-.text-center {
-  text-align: center;
-}
-
-.p-1 {
+  height: 20%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  align-items: center;
+  margin: 1rem;
+  gap: 1rem;
   padding: 1rem;
 }
+header h1 {
+  animation: slideInFromRight 0.5s ease-in;
+}
+header p {
+  animation: slideInFromLeft 0.5s ease-in;
+}
+#survey-form {
+  font-size: 1.25rem;
+  margin: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation: slideInFromBottom 0.5s ease-in;
+}
+.form-div {
+  width: 600px;
+  margin: 30px;
+}
+#name,
+#email,
+#number {
+  cursor: pointer;
+  outline: none;
+  border: none;
+  width: 600px;
+  height: 30px;
+  font-size: 1.5rem;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+}
+#name {
+  width: 100%;
+}
 
-@media (max-width: 900px) {
-  .container {
-    width: 85%;
+#email {
+  width: 100%;
+}
+
+#number {
+  width: 100%;
+}
+input::placeholder {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 1.25rem;
+}
+label {
+  color: #106bed;
+  font-size: 1.5rem;
+}
+textarea {
+  font-size: 1.25rem;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+  margin: 10px;
+  padding: 10px;
+}
+p {
+  font-size: 1.5rem;
+  color: #106bed;
+}
+#submit {
+  display: block;
+  margin: 0 auto;
+  border-radius: 5px;
+  background-color: #fff;
+  font-size: 1rem;
+  height: 30px;
+  width: 100px;
+  outline: none;
+  border: none;
+  margin-top: 50px;
+  cursor: pointer;
+}
+#submit:hover {
+  background-color: #106bed;
+  color: #fff;
+  height: 35px;
+  width: 105px;
+}
+#radio {
+  display: flex;
+  flex-direction: column;
+}
+#radio label {
+  font-size: 1.5rem;
+  margin: 20px;
+  color: #fff;
+  cursor: pointer;
+}
+input[type="radio"],
+input[type="checkbox"] {
+  width: 10%;
+  border: 0;
+  height: 20px;
+  transform: translateY(10%);
+}
+#radio input {
+  cursor: pointer;
+  outline: none;
+  border: none;
+  font-size: 1.5rem;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+#check {
+  display: flex;
+  flex-direction: column;
+}
+#check label {
+  font-size: 1.5rem;
+  margin: 20px;
+  color: #fff;
+  cursor: pointer;
+}
+#check input {
+  cursor: pointer;
+  outline: none;
+  border: none;
+  font-size: 1.5rem;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+#dropdown {
+  cursor: pointer;
+  outline: none;
+  border: none;
+  margin: 10px;
+  border-radius: 5px;
+  height: 30px;
+  width: 100%;
+  background-color: #fff;
+  font-size: 1.5rem;
+  font-family: "Courier New", Courier, monospace;
+}
+@media (max-width: 750px) {
+  body {
+    font-size: 1rem;
   }
-  header #title {
-    font-size: 2rem;
+  .form-div {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  #name,
+  #email,
+  #number,
+  #dropdown {
+    width: 300px;
+  }
+  textarea {
+    width: 300px;
+  }
+  #radio {
+    width: 200px;
+    text-align: center;
+    display: flex;
+  }
+  #check {
+    width: 200px;
+    text-align: center;
+  }
+  #text-div {
+    width: 400px;
+    text-align: center;
+  }
+  input[type="radio"],
+  input[type="checkbox"] {
+    width: auto;
+    border: 0;
+    height: 20px;
+    transform: translateY(10%);
   }
 }
-@media (max-width: 700px) {
-  .container {
-    width: 100%;
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
   }
-  header #title {
-    font-size: 2rem;
+  100% {
+    transform: translateX(0);
   }
-  header #description {
-    font-size: 1rem;
+}
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
