--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,12 @@ header {
   gap: 1rem;
   padding: 1rem;
 }
-header h1 {
+/* header h1 {
   animation: slideInFromRight 0.5s ease-in;
 }
 header p {
   animation: slideInFromLeft 0.5s ease-in;
-}
+} */
 #survey-form {
   font-size: 1.25rem;
   margin: 10%;
@@ -64,7 +64,7 @@ header p {
   outline: none;
   border: none;
   width: 600px;
-  height: 30px;
+  height: 40px;
   font-size: 1.5rem;
   border-radius: 5px;
   padding: 10px;
@@ -171,7 +171,7 @@ input[type="checkbox"] {
   border: none;
   margin: 10px;
   border-radius: 5px;
-  height: 30px;
+  height: 40px;
   width: 100%;
   background-color: #fff;
   font-size: 1.5rem;
